# entity-extraction-mcp

./: .gitignore  README.md  chat_2_entity_mcp_proposal.md  claude_desktop_config.json  conversation.json  conversation2.json  package.json  pyproject.toml  server.py
ui/: index.html
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/extract/: route.ts
web/app/api/recommend/: route.ts
web/app/api/ticket/: route.ts
web/components/: ConversationPanel.tsx  ResultPanel.tsx
web/public/data/: delivery_delay_inquiry_conversation.json  membership_personas_and_partners_kr.json
