[project]
name = "entity-extraction-mcp"
version = "1.0.0"
description = "MCP server for extracting entities from conversations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
entity-extraction-mcp = "server:main"
